# Better-tiplink

./: Cargo.toml
backend/: Cargo.toml
backend/src/: auth.rs  main.rs  middleware.rs
backend/src/routes/: solana.rs  user.rs
indexer/: Cargo.toml
indexer/src/: main.rs
mpc/: Cargo.toml
mpc/src/: auth.rs  main.rs  serialization.rs  tss.rs
mpc_server_1/: Cargo.toml
mpc_server_1/src/: auth.rs  main.rs
mpc_server_2/: Cargo.toml
mpc_server_2/src/: convert.rs  main.rs  middleware.rs
store/: Cargo.toml
store/migrations_backend/: 001_init.sql
store/migrations_mpc_1/: 0001_init.sql
store/src/: lib.rs  mpc.rs  user.rs
