[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4.11.0"
tokio = "1.47.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
store = {path = "../store"}
dotenvy = "0.15.7"
jsonwebtoken = "9.3.1"
chrono = "0.4.41"
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
uuid = "1.18.1"
futures = "0.3.31"
solana-sdk = "1"