[package]
name = "mpc"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4.11.0"
bs58 = "0.5.1"
ed25519-dalek = "2.2.0"
serde = "1.0.219"
serde_json = "1.0.143"
solana-client = "3.0.1"
solana-sdk = "3.0.0"
tokio = "1.47.1"
multi-party-eddsa = { git = "https://github.com/ZenGo-X/multi-party-eddsa.git" }
curv = {package = "curv-kzen", version = "0.9.0" }
rand07 = { package = "rand", version =  "0.7" }
clap = { version = "3", features = ["derive", "color"] }
solana-streamer = "1"
spl-memo = "3.0.0"
solana-test-validator = "1"
