[package]
name = "mpc"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4.11.0"
serde = "1.0.219"
serde_json = "1.0.143"
tokio = "1.47.1"
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
solana-sdk = "1"
base64 = "0.22.1"
clap = { version = "3", features = ["derive", "color"] }
bs58 = "0.4"
rand07 = { package = "rand", version =  "0.7" }
ed25519-dalek = "1"
multi-party-eddsa = { git = "https://github.com/ZenGo-X/multi-party-eddsa.git", rev = "4b5e5c8d8e92f94eed38b037e0d83ad0d2a144ea" }
curv = {package = "curv-kzen", version = "0.9" }
spl-memo = "3"
solana-client = "3.0.3"
jsonwebtoken = "9.3.1"
dotenvy = "0.15.7"
chrono = "0.4.42"
futures = "0.3.31"
